deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  ports:
    - name: grafana
      protocol: TCP
      port: 3000
  selector:
      app: grafana
